[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/pipe-green.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pipe.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.443, 289 )

[sub_resource type="CircleShape2D" id=2]
radius = 12.4832

[node name="Pipe" type="Node2D"]
z_index = 1
script = ExtResource( 2 )

[node name="UpperPipe" type="KinematicBody2D" parent="."]
collision_mask = 2

[node name="TextureRect" type="TextureRect" parent="UpperPipe"]
margin_right = 52.0
margin_bottom = 320.0
rect_rotation = 180.0
rect_scale = Vector2( 0.8, 1 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperPipe"]
position = Vector2( -15, -289 )
shape = SubResource( 1 )

[node name="LowerPipe" type="KinematicBody2D" parent="."]
rotation = 3.14159
collision_mask = 2

[node name="TextureRect" type="TextureRect" parent="LowerPipe"]
margin_left = 40.0
margin_top = -2.79753e-06
margin_right = 92.0
margin_bottom = 320.0
rect_rotation = 180.0
rect_scale = Vector2( 0.8, 1 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerPipe"]
position = Vector2( 15.149, -289 )
shape = SubResource( 1 )

[node name="WayPoint" type="Area2D" parent="."]
position = Vector2( -20, 0 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WayPoint"]
shape = SubResource( 2 )
[connection signal="body_entered" from="WayPoint" to="." method="_on_WayPoint_body_entered"]
